Project cleanup - preparation for adding the QT interface

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,42 +1,44 @@
 # Set the minimum version of CMake that can be used
 cmake_minimum_required(VERSION 3.5)
 
-# Set the project name
+# Set the project name and some of the useful variables
 project (qt_puzzle)
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_BUILD_TYPE Release)
 
 # Find OpenCV package - used by the image interface
 find_package(OpenCV REQUIRED)
 
-
-# Create a sources variable with a link to all cpp files to compile
-set(SOURCES_GUI
-    src/main.cpp
-    src/slidingpuzzle.cpp
-    src/slidingpuzzleimageif.cpp
-)
-
+# Configuration for the initial, text-based version
 set(SOURCES_CLI
-    src/slidingpuzzlecli.cpp
+    src/clipuzzle.cpp
     src/slidingpuzzle.cpp
     src/slidingpuzzletextif.cpp
 )
 
-# Add an executable with the above sources
-add_executable(qt_puzzle ${SOURCES_GUI})
-add_executable(qt_puzzle_cli ${SOURCES_CLI})
+add_executable(text_puzzle ${SOURCES_CLI})
 
-# Set the directories that should be included in the build command for this target
-target_include_directories(qt_puzzle
+target_include_directories(text_puzzle
     PRIVATE 
         ${PROJECT_SOURCE_DIR}/include
 )
 
-target_include_directories(qt_puzzle_cli
+# Configuration for the second version with OpenCV-based rough GUI
+set(SOURCES_CV
+    src/cvpuzzle.cpp
+    src/slidingpuzzle.cpp
+    src/slidingpuzzleimageif.cpp
+)
+
+add_executable(cv_puzzle ${SOURCES_CV})
+
+target_include_directories(cv_puzzle
     PRIVATE 
         ${PROJECT_SOURCE_DIR}/include
 )
 
-target_link_libraries( qt_puzzle
+target_link_libraries(cv_puzzle
     PRIVATE
         ${OpenCV_LIBS}
 )
